--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ logging.level.org.hibernate.type = TRACE
 
 spring.security.user.name= admin
 spring.security.user.password= admin
+
+file.upload.dir=src/main/resources/static/img
