--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.security.user.name= admin
 spring.security.user.password= admin
 
 file.upload.dir=src/main/resources/static/img
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=honzacermak74@gmail.com
+spring.mail.password=bgqfvypqxibxkfhk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
