--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,11 @@ spring.security.user.name= admin
 spring.security.user.password= admin
 
 file.upload.dir=src/main/resources/static/img
+#set max file upload size
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
+#email sending
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=honzacermak74@gmail.com
